Closed Bug 993275 Opened 11 years ago Closed 11 years ago

[Bluetooth][Certification][PTS][Bluedroid][1.4] HFP TC_AG_COD_BV_02_I

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.4+, firefox29 wontfix, firefox30 fixed, firefox31 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)

VERIFIED FIXED
1.4 S6 (25apr)
blocking-b2g 1.4+
Tracking Status
firefox29 --- wontfix
firefox30 --- fixed
firefox31 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: ericcc, Assigned: ben.tian)

References

Details

Attachments

(2 files)

Attached file TC_AG_COD_BV_02_I.zip
### ENV Nexus 4/Bluedroid https://pvtbuilds.mozilla.org/pvt/mozilla.org/b2gotoro/nightly/mozilla-aurora-nexus-4/2014/03/2014-03-25-16-02-01/ ### STR 1. PTS 5.0 2. TC_AG_COD_BV_02_I ### Expected Pass ### Actual Test case : TC_AG_COD_BV_02_I started - SDP Service record for PTS: 'Handsfree HF' successfully registered - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - AT: SPP connect succeeded - AT: WARNING: IUT does not report support for AT+CHLD=3 in its +CHLD response, but TSPC_HFP_2_12c is set to TRUE - AT: Service Level Connection established - AT: post SLC command sequence complete - MTC: IUT was able to connect to HF when CoD set to 0x200404 - AT: Service Level Connection disabled - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - AT: SPP connect succeeded - AT: WARNING: IUT does not report support for AT+CHLD=3 in its +CHLD response, but TSPC_HFP_2_12c is set to TRUE - AT: Service Level Connection established - AT: post SLC command sequence complete - MTC: IUT was able to connect to HF when CoD set to 0x202404 - AT: Service Level Connection disabled - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - AT: SPP connect succeeded - AT: WARNING: IUT does not report support for AT+CHLD=3 in its +CHLD response, but TSPC_HFP_2_12c is set to TRUE - AT: Service Level Connection established - AT: post SLC command sequence complete - MTC: IUT was able to connect to HF when CoD set to 0x200408 - AT: Service Level Connection disabled - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, Final Verdict : None
Blocks: 986297
The cause is that BluetoothServiceBluedroid doesn't handle audio service devices with major device = TOY (0x08). Attached patch handles audio service devices in bluedroid as in bug 828837 and bug 870304.
Assignee: nobody → btian
Attachment #8404513 - Flags: review?(echou)
Comment on attachment 8404513 [details] [diff] [review] Patch 1 (v1): Ensure icon audio service devices in bluedroid Review of attachment 8404513 [details] [diff] [review]: ----------------------------------------------------------------- r=me with nit addressed. ::: dom/bluetooth/bluedroid/BluetoothServiceBluedroid.cpp @@ +222,1 @@ > } not-even-a-nit: please help with leaving a blank line between two functions. Thanks!
Attachment #8404513 - Flags: review?(echou) → review+
Set 1.4? as this bug fails bluetooth certification HFP test on bluedroid.
blocking-b2g: --- → 1.4?
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
blocking-b2g: 1.4? → 1.4+
Target Milestone: 1.4 S5 (11apr) → 1.4 S6 (25apr)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: