Bug 993275 - [Bluedroid] Ensure icon for audio service devices. r=echou, a=1.4+